<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/viewPager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/comm_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#fff"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingLeft="35dp"
            android:text="@string/old_password"
            android:textColor="@color/item_value_color"
            android:textSize="@dimen/common_text_size" />

        <EditText
            android:id="@+id/et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/old_password_hint"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/item_key_color"
            android:textSize="@dimen/common_text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/item_line"
        android:padding="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#fff"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingLeft="35dp"
            android:text="@string/new_password"
            android:textColor="@color/item_value_color"
            android:textSize="@dimen/common_text_size" />

        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/new_password_hint"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/item_key_color"
            android:textSize="@dimen/common_text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/item_line"
        android:padding="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#fff"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/confirm_password"
            android:textColor="@color/item_value_color"
            android:textSize="@dimen/common_text_size" />

        <EditText
            android:id="@+id/et_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/confirm_password_hint"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/item_key_color"
            android:textSize="@dimen/common_text_size" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/common_blue_rounded_btn_bg"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/common_text_size" />

</LinearLayout>