<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/viewPager"
    android:gravity="center_horizontal">

    <include layout="@layout/comm_title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_logo_normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/common_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_about"
        style="@style/blue_button_style"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/uc_about" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/item_key_color"
        android:textSize="@dimen/common_text_size" />

    <RelativeLayout
        android:id="@+id/test_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_develop"
            style="@style/blue_button_style"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/develop_test" />

        <Button
            android:id="@+id/btn_js"
            style="@style/blue_button_style"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/btn_develop"
            android:gravity="center"
            android:text="@string/js_test" />
    </RelativeLayout>

</LinearLayout>