<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainFragmentActivity">

    <!--正文内容-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <LinearLayout
            android:id="@+id/layout_footer_main"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:background="#fff"
            android:clipChildren="false"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#e5e5e5" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/home_tab_bg"
                android:clipChildren="false"
                android:orientation="horizontal"
                android:paddingTop="3dp">

                <RadioButton
                    android:id="@+id/qu_btn_home"
                    style="@style/redio_btn_style"
                    android:drawableTop="@drawable/radiobutton_img_home_bg"
                    android:text="@string/radio_home"
                    android:textColor="@color/radiobutton_text_color" />

                <RadioButton
                    android:id="@+id/qu_btn_servercenter"
                    style="@style/redio_btn_style"
                    android:drawableTop="@drawable/radiobutton_img_service_bg"
                    android:text="@string/radio_servercenter"
                    android:textColor="@color/radiobutton_text_color" />

                <RadioButton
                    android:id="@+id/qu_btn_community"
                    style="@style/redio_btn_style"
                    android:drawableTop="@drawable/radiobutton_img_community_bg"
                    android:text="@string/radio_community"
                    android:textColor="@color/radiobutton_text_color" />

            </RadioGroup>
        </LinearLayout>

        <com.yunfei.wh.ui.custom.CustomViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/layout_footer_main"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_bg">

            <com.yunfei.wh.ui.custom.CommonTitleLayout
                android:id="@+id/commontitlelayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <!--侧滑内容-->

    <com.yunfei.wh.ui.custom.UserCenterLayout
        android:id="@+id/usercenterlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start" />


</android.support.v4.widget.DrawerLayout>
